# pastpaper-anki-miner

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pastpaper_anki_miner/: __init__.py  cli.py  documents.py  export.py  extract.py  models.py
tests/: test_documents.py  test_extract.py
